{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 280,
  "lineage": "fb95a9d8-059c-9a8f-2ba1-cdad2b663766",
  "resources": [
    {
      "module": "module.gitlab_server",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.73.22.111",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-12-18T06:36:27.186-08:00",
            "id": "projects/deimos-internal-playground/regions/us-east1/addresses/gitlab-server",
            "name": "gitlab-server",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "deimos-internal-playground",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/addresses/gitlab-server",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "module": "module.gitlab_server",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-01T13:13:27.824-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deimos-internal-playground/global/firewalls/my-firewall-rule",
            "log_config": [],
            "name": "my-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "priority": 1000,
            "project": "deimos-internal-playground",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/firewalls/my-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gitlab_server",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gitlab-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211214",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/zones/us-east1-c/disks/test-gitlab-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/deimos-internal-playground/zones/us-east1-c/instances/test-gitlab-server",
            "instance_id": "3010041246073088658",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata": {
              "foo": "bar"
            },
            "metadata_fingerprint": "cQWK5VBBWMY=",
            "metadata_startup_script": "#install and configure the neccessary dependencies\nsudo apt-get update\nsudo apt-get install -y curl openssh-server ca-certificates tzdata perl\n\n#add GitLab package repository\ncurl https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh | sudo bash\n\n\n#reconfigure the gitlab-ctl\nsudo gitlab-ctl reconfigure\n\n#get the latest version of paostgres\nsudo gitlab-ctl pg-upgrade\n\n#restart gitlab-ctl\nsudo gitlab-ctl restart\n\n#t [...]
            "name": "test-gitlab-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.139.186.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
                "network_ip": "10.8.0.17",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-public",
                "subnetwork_project": "deimos-internal-playground"
              }
            ],
            "project": "deimos-internal-playground",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/zones/us-east1-c/instances/test-gitlab-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bar",
              "foo"
            ],
            "tags_fingerprint": "1gqCRgrww4E=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc",
            "module.private_vpc.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.private_openvpn",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.211.184.251",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-01-05T02:28:05.725-08:00",
            "id": "projects/deimos-internal-playground/regions/us-east1/addresses/global-openvpn-ip-terraform-team-test-private-vpc-network",
            "name": "global-openvpn-ip-terraform-team-test-private-vpc-network",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "deimos-internal-playground",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/addresses/global-openvpn-ip-terraform-team-test-private-vpc-network",
            "timeouts": {
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/zones/us-east1-b/instances/terraform-team-test-private-openvpn-001"
            ]
          },
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_openvpn",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-external-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "1194"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-05T02:28:05.742-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deimos-internal-playground/global/firewalls/allow-external-ssh-terraform-team-test-private-vpc-network",
            "log_config": [],
            "name": "allow-external-ssh-terraform-team-test-private-vpc-network",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "priority": 1000,
            "project": "deimos-internal-playground",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/firewalls/allow-external-ssh-terraform-team-test-private-vpc-network",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "mtu": 0,
            "name": "terraform-team-test-private-vpc-network",
            "project": "deimos-internal-playground",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-31T04:10:53.559-08:00",
            "id": "projects/deimos-internal-playground/regions/us-east1/routers/terraform-team-test-private-vpc-router",
            "name": "terraform-team-test-private-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "project": "deimos-internal-playground",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/routers/terraform-team-test-private-vpc-router",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "deimos-internal-playground/us-east1/terraform-team-test-private-vpc-router/terraform-team-test-private-vpc-nat",
            "min_ports_per_vm": 0,
            "name": "terraform-team-test-private-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "deimos-internal-playground",
            "region": "us-east1",
            "router": "terraform-team-test-private-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "timeouts": {
            },
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc",
            "module.private_vpc.google_compute_router.vpc_router",
            "module.private_vpc.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-31T04:10:53.634-08:00",
            "gateway_address": "10.8.16.1",
            "id": "projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-private",
            "ip_cidr_range": "10.8.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "terraform-team-test-private-vpc-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "deimos-internal-playground",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.6.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-private",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-31T04:10:54.983-08:00",
            "gateway_address": "10.8.0.1",
            "id": "projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-public",
            "ip_cidr_range": "10.8.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "terraform-team-test-private-vpc-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "deimos-internal-playground",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.6.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.6.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-public",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.8.16.1",
            "id": "projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-private",
            "ip_cidr_range": "10.8.16.0/20",
            "name": "terraform-team-test-private-vpc-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "private_ip_google_access": true,
            "project": "deimos-internal-playground",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.6.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.private_vpc.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.8.0.1",
            "id": "projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-public",
            "ip_cidr_range": "10.8.0.0/20",
            "name": "terraform-team-test-private-vpc-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "private_ip_google_access": true,
            "project": "deimos-internal-playground",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.6.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.6.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/regions/us-east1/subnetworks/terraform-team-test-private-vpc-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.private_vpc.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-12-31T04:11:29.363-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deimos-internal-playground/global/firewalls/terraform-team-test-private-vpc-private-allow-ingress",
            "log_config": [],
            "name": "terraform-team-test-private-vpc-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "priority": 1000,
            "project": "deimos-internal-playground",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/firewalls/terraform-team-test-private-vpc-private-allow-ingress",
            "source_ranges": [
              "10.6.0.0/20",
              "10.6.16.0/20",
              "10.6.32.0/20",
              "10.8.0.0/20",
              "10.8.16.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc",
            "module.private_vpc.google_compute_subnetwork.vpc_subnetwork_private",
            "module.private_vpc.google_compute_subnetwork.vpc_subnetwork_public",
            "module.private_vpc.module.network_firewall.data.google_compute_subnetwork.private_subnetwork",
            "module.private_vpc.module.network_firewall.data.google_compute_subnetwork.public_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-12-31T04:10:53.356-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deimos-internal-playground/global/firewalls/terraform-team-test-private-vpc-allow-restricted-inbound",
            "log_config": [],
            "name": "terraform-team-test-private-vpc-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "priority": 1000,
            "project": "deimos-internal-playground",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/firewalls/terraform-team-test-private-vpc-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-12-31T04:10:53.457-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deimos-internal-playground/global/firewalls/terraform-team-test-private-vpc-public-allow-ingress",
            "log_config": [],
            "name": "terraform-team-test-private-vpc-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/networks/terraform-team-test-private-vpc-network",
            "priority": 1000,
            "project": "deimos-internal-playground",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deimos-internal-playground/global/firewalls/terraform-team-test-private-vpc-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}